--- a/config.toml
+++ b/config.toml
@@ -59,8 +59,8 @@ social_icons = [
 
 # Summary at the top
 summary = [
-{icon="ai-cv", icon_pack="ai", text="The most recent version of my CV", link="files/CV_saydjari.pdf", fontsize="18px", iconsize="30px"},
-{icon="ai-ads", icon_pack="ai", text="The most current list of my publications", link="https://ui.adsabs.harvard.edu/search/filter_doctype_facet_hier_fq_doctype=AND&filter_doctype_facet_hier_fq_doctype=doctype_facet_hier%3A%220%2FArticle%22&fq=%7B!type%3Daqp%20v%3D%24fq_doctype%7D&fq_doctype=(doctype_facet_hier%3A%220%2FArticle%22)&p_=0&q=%20author%3A%22saydjari%2C%20andrew%22&sort=date%20desc%2C%20bibcode%20desc", fontsize="18px", iconsize="30px"},
+{icon="ai-cv", icon_pack="ai", text="My current CV", link="files/CV_saydjari.pdf", fontsize="18px", iconsize="30px"},
+{icon="ai-ads", icon_pack="ai", text="My current papers", link="https://ui.adsabs.harvard.edu/search/filter_doctype_facet_hier_fq_doctype=AND&filter_doctype_facet_hier_fq_doctype=doctype_facet_hier%3A%220%2FArticle%22&fq=%7B!type%3Daqp%20v%3D%24fq_doctype%7D&fq_doctype=(doctype_facet_hier%3A%220%2FArticle%22)&p_=0&q=%20author%3A%22saydjari%2C%20andrew%22&sort=date%20desc%2C%20bibcode%20desc", fontsize="18px", iconsize="30px"},
 ]
 
 # Your interests
@@ -85,7 +85,7 @@ disable_footer = true
 # Widgets to show on main page
 show_publications = true
 show_posts = false
-show_projects = false
+show_projects = true
 
 # Choose your colorscheme among those
 #colorscheme = "default"
