--- a/.github/workflows/linkCheck.yml
+++ b/.github/workflows/linkCheck.yml
@@ -1,9 +1,9 @@
 name: Links
 
 on:
-  push:
-    branches:
-     - master
+  workflow_run:
+    workflows: ["deploy"]
+    types: [completed] #requested
   repository_dispatch:
   workflow_dispatch:
   schedule:
@@ -18,9 +18,6 @@ jobs:
       - name: Link Checker
         id: lychee
         uses: lycheeverse/lychee-action@ec7614d7605b47efb08dc370f6d0a71884cba944 # for v1.8.0
-        with:
-          args: >-
-            --config ./lychee.toml
         env:
           # to be used in case rate limits are surpassed
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
