--- a/.github/workflows/linkCheck.yml
+++ b/.github/workflows/linkCheck.yml
@@ -19,7 +19,7 @@ jobs:
         id: lychee
         uses: lycheeverse/lychee-action@ec7614d7605b47efb08dc370f6d0a71884cba944 # for v1.8.0
         with:
-          args: --exclude-path 'themes' --verbose --no-progress './**/*.md' './**/*.html' './**/*.rst' #-c './lychee.toml'
+          args: --verbose --no-progress './**/*.md' './**/*.html' './**/*.rst' #-c './lychee.toml' --exclude-path 'themes'
         env:
           # to be used in case rate limits are surpassed
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
