--- a/config.toml
+++ b/config.toml
@@ -17,6 +17,7 @@ highlight_code = false
 
 # Whether to build a search index to be used later on by a JavaScript library
 build_search_index = true
+external_links_target_blank = true
 
 [extra]
 # Put all your custom variables here
