--- a/lychee.toml
+++ b/lychee.toml
@@ -1,3 +1,5 @@
 exclude_path = ["themes"]
 
-user_agent = "Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:93.0) Gecko/20100101 Firefox/93.0"
+user_agent = "curl/7.83. 1"
+
+include_mail = true
