update issue creation

--- a/lychee.toml
+++ b/lychee.toml
@@ -2,9 +2,9 @@ user_agent = "curl/7.83. 1"
 
 # Exclude URLs and mail addresses from checking (supports regex).
 exclude = [ 
-    '*mathstatbites.org*',
-    '*wrps.org*',
-    '*pubs.acs.org*',
+    '.*mathstatbites\.org.*',
+    '.*wrps\.org.*',
+    '.*pubs\.acs\.org.*',
  ]
 
 exclude_path = ["themes"]
