--- a/.github/workflows/linkCheck.yml
+++ b/.github/workflows/linkCheck.yml
@@ -22,10 +22,20 @@ jobs:
           # to be used in case rate limits are surpassed
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
+      - name: Find Link Checker Issue
+        uses: micalevisk/last-issue-action@v1
+        with:
+          state: open
+          labels: |
+            link-checker
+
       - name: Create Issue From File
         if: env.lychee_exit_code != 0
         uses: peter-evans/create-issue-from-file@v4
         with:
           title: Link Checker Report
+          issue-number: "${{ steps.link-checker-issue.outputs.issue_number }}"
           content-filepath: ./lychee/out.md
-          labels: report, automated issue
+          token: ${{secrets.GITHUB_TOKEN}}
+          labels: |
+            link-checker
