--- a/.github/workflows/linkCheck.yml
+++ b/.github/workflows/linkCheck.yml
@@ -23,18 +23,29 @@ jobs:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
       - name: link-checker-issue
+        id: last-issue
         uses: micalevisk/last-issue-action@v2
         with:
           state: open
           labels: |
             link-checker
 
-      - name: Create Issue From File
-        if: env.lychee_exit_code != 0
+      - name: Create Issue From File Found Past
+        if: ${{ env.lychee_exit_code != 0 && steps.last-issue.outputs.has-found == 'true' }}
         uses: peter-evans/create-issue-from-file@v4
         with:
           title: Link Checker Report
-          issue-number: "${{ steps.link-checker-issue.outputs.issue_number }}"
+          issue-number: "${{ steps.last-issue.outputs.issue_number }}"
+          content-filepath: ./lychee/out.md
+          token: ${{secrets.GITHUB_TOKEN}}
+          labels: |
+            link-checker
+
+      - name: Create Issue From File No Past
+        if: ${{ env.lychee_exit_code != 0 && steps.last-issue.outputs.has-found == 'false' }}
+        uses: peter-evans/create-issue-from-file@v4
+        with:
+          title: Link Checker Report
           content-filepath: ./lychee/out.md
           token: ${{secrets.GITHUB_TOKEN}}
           labels: |
