--- a/.github/workflows/linkCheck.yml
+++ b/.github/workflows/linkCheck.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: link-checker-issue
         id: last-issue
-        uses: micalevisk/last-issue-action@decc190990d2d866b736688636bcd4abe19b56ce # for v2.0.0
+        uses: micalevisk/last-issue-action@2.0.0 # for v2.0.0
         with:
           state: open
           labels: |
