--- a/.github/workflows/linkCheck.yml
+++ b/.github/workflows/linkCheck.yml
@@ -31,7 +31,7 @@ jobs:
             link-checker
 
       - name: Create Issue From File Found Past
-        if: ${{ env.lychee_exit_code != 0 && steps.last-issue.outputs.has-found == 'true' }}
+        if: ${{ steps.last-issue.outputs.has-found == 'true' }} #env.lychee_exit_code != 0 &&
         uses: peter-evans/create-issue-from-file@v4
         with:
           title: Link Checker Report
@@ -42,7 +42,7 @@ jobs:
             link-checker
 
       - name: Create Issue From File No Past
-        if: ${{ env.lychee_exit_code != 0 && steps.last-issue.outputs.has-found == 'false' }}
+        if: ${{ steps.last-issue.outputs.has-found == 'false' }} #env.lychee_exit_code != 0 &&
         uses: peter-evans/create-issue-from-file@v4
         with:
           title: Link Checker Report
