--- a/.github/workflows/linkCheck.yml
+++ b/.github/workflows/linkCheck.yml
@@ -35,15 +35,6 @@ jobs:
         with:
           title: Link Checker Report
           content-filepath: ./lychee/out.md
-          issue-number: "${{ steps.last-issue.outputs.issue_number }}"
-          token: ${{secrets.GITHUB_TOKEN}}
-          labels: link-checker, automated issue
-
-      - name: Create Issue From File No Past
-        if: ${{ steps.last-issue.outputs.has-found == 'false' }} #env.lychee_exit_code != 0 &&
-        uses: peter-evans/create-issue-from-file@v4
-        with:
-          title: Link Checker Report
-          content-filepath: ./lychee/out.md
+          issue-number: ${{ steps.last-issue.outputs.issue_number }}
           token: ${{secrets.GITHUB_TOKEN}}
           labels: link-checker, automated issue
