--- a/config.toml
+++ b/config.toml
@@ -11,6 +11,10 @@ base_url = "https://andrew-saydjari.github.io/"
 # Whether to automatically compile all Sass files in the sass directory
 compile_sass = true
 
+# Whether to do syntax highlighting
+# Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
+highlight_code = false
+
 # Whether to build a search index to be used later on by a JavaScript library
 build_search_index = true
 external_links_target_blank = true
