--- a/config.toml
+++ b/config.toml
@@ -52,7 +52,7 @@ menu_right = [
 
 # Social icons that will appear under your profile box
 social_icons = [
-{icon="fa-envelope", icon_pack="fa", link="mailto:andrew.saydjari@cfa.harvard.edu"},
+{icon="fa-envelope", icon_pack="fa", link="mailto:andrew.saydjari@princeton.edu"},
 {icon="fa-github", icon_pack="fab", link="https://github.com/andrew-saydjari"},
 {icon="ai-arxiv", icon_pack="ai", link="https://arxiv.org/search/?query=Saydjari%2C+A&searchtype=author&abstracts=show&order=-announced_date_first&size=200"},
 {icon="ai-google-scholar", icon_pack="ai", link="https://scholar.google.com/citations?user=IUvt0zoAAAAJ&hl=en"},
